--- a/Swisi.mw
+++ b/Swisi.mw
@@ -26,7 +26,7 @@ GDP_PPP_per_capita 	= $30,186|GDP_PPP_per_capita_rank=8th|
 GDP_nominal_per_capita 	= $42,138|GDP_nominal_per_capita_rank=3rd|
 sovereignty_type 	=[[Independence]] |
 established_events 	=- Declared<br> - Recognised<br>Federal state |
-established_dates 	=[[Lisakoli Fedelali ya 1921|Lisakoli Fedelali]]<br> [[August 1]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
+established_dates 	=[[Lisakoli Fedelali ya 1921|Lisakoli Fedelali]]<br> [[1 Ogusiti]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
 currency 	= [[Fran Swisi]]|currency_code=CHF|
 time_zone 	= [[Central European Time|CET]] |utc_offset=+1 |
 time_zone_DST	= [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
