*Empty MediaWiki Message*

--- a/Lialémani.mw
+++ b/Lialémani.mw
@@ -1,6 +1,6 @@
 '''Kialemani''' ezali [[lokótá]] na bato ya [[Alémani]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Otrishi]] na fimwa bato na [[Afríka]] ([[Namibia]], [[Kamerun]], na [[Togo]]).
 
-[[Category:Lokótá]]
+[[Category:Lokótá]] [[Category:Bisé ya Eropa]] 
 
 [[als:Deutsche Sprache]]
 [[de:Deutsche Sprache]]
