--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -48,7 +48,7 @@
 [[Rwanda]]
 
 === S ===
-[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seyshel]] - [[Sidafrika]] - [[Sierra Leone]] - [[Somalie]] - [[Swaziland]] - [[Swisi]]
+[[San Salvador (esé)|San Salvador]] - [[Sǎo Tomé na Principe]] - [[Sénégal]] - [[Seyshel]] - [[Sidafrika]] - [[Sierra Leone]] - [[Somalia]] - [[Sudani]] - [[Swaziland]] - [[Swisi]]
 
 === T ===
 [[Tshad]] - [[Togo]] - [[Tunisia]]
