--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -35,7 +35,7 @@
 [[Malawi]] - [[Mali]] - [[Moritani]] - [[Mozambiki]]
 
 === N ===
-[[Namibia]] - [[Niger]] - [[Nijeria]]
+[[Namibia]] - [[Nijer]] - [[Nijeria]]
 
 === O ===
 
