*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -1,12 +1,12 @@
 {{Infobox_country|
 common_name 		= Namibia |
 native_name 		= Republic of Namibia<br><br><br>|
-image_flag 		= Image:Namibia flag medium.png |
-image_coat 		= Image:Namibia_coa.png |
-image_map 		= Image:LocationNamibia.png |
-national_motto 		= Unity, Liberty, Justice<br>(Lingála: AAAAAAA    AAAAAAA     Jistisi)|
+image_flag 		= Namibia flag medium.png |
+image_coat 		= Namibia_coa.png |
+image_map 		= LocationNamibia.png |
+national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, jistisi)|
 national_anthem 	= [[Namibia, Land of the Brave]] |
-official_languages 	= [[Lingɛlɛsi]] |
+official_languages 	= [[Lingɛlɛsi]]|
 Nkótá nationales      = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
 capital 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 largest_city 		= [[Windhoek]] (lialémani: Windhuk) |
