--- a/Liarabi.mw
+++ b/Liarabi.mw
@@ -1,3 +1,3 @@
 [[category:Lokótá]]
-'''Kiarabi''' ezali lokótá elobami na bikolo mingi okati ya Asia-Pene (to Moyen Orient).
+'''Liarabi''' ezali lokótá elobami na bikolo mingi okati ya Asia-Pene (to Moyen Orient).
 {{ndambo}}
