--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -26,7 +26,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 -->
 
 ==Media==
-Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.
+<!--Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.-->
 
 == Makasa-web olibanda Wikipedia ==
 *{{en icon}} [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
