--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -286,7 +286,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
 * [http://www.groupelavenir.net/lingala.htm/ L'Avenir - Basango na Lingala]
 <br clear="all"/>
-{Bisé ya Afrika}}
+{{Bisé ya Afrika}}
 
 [[af:Demokratiese Republiek van die Kongo]]
 [[an:Republica Democratica d'o Congo]]
