*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,6 +1,3 @@
-The '''Swiss Confederation''' or '''Switzerland''' is a landlocked federal state in [[Europe]], which borders [[Germany]], [[France]], [[Italy]], [[Austria]] and [[Liechtenstein]]. The country has a strong tradition of [[neutral country|political and military neutrality]], but also of international co-operation, and is home to many international organisations. 
-
-''Confœderatio Helvetica'' (CH), the [[Latin]] version of the official name, avoids choosing one of the four official languages. The abbreviation is similarly used; for example, it is used as Switzerland's [[country code top-level domain|ccTLD]], [[.ch]].
 
 {{Infobox_country|
 common_name 		= Swisi |
@@ -37,61 +34,17 @@ footnotes 	= |
 == Historia ==
 ''Article ya molayi: [[Historia ya Swisi]]''
 
-Switzerland is a federation of relatively autonomous [[Cantons of Switzerland|canton]]s, some of which have a history of confederacy that goes back more than 700 years, arguably putting them among the world's oldest surviving [[republic]]s.
-
-According to the popular legend, in [[1291]], representatives of the '''[[three forest cantons]]''' of [[Canton of Uri|Uri]], [[Schwyz]], and [[Unterwalden]] signed the [[Federal Charter of 1291|Federal Charter]]. The charter united the involved parties in the struggle against foreign rule by the [[Habsburg]]s, who then held the German imperial throne of the [[Holy Roman Empire]]. At the [[Battle of Morgarten]] in [[1315]], the Swiss defeated the Habsburg army and secured quasi-independence as the Swiss Confederation. The authenticity of the Federal Charter is disputed with many historians agreeing that it is in fact a forgery of the [[14th century]].
-
-By [[1353]], the three original cantons had been joined by the cantons of [[Glarus]] and [[Zug]] and the city states of [[Lucerne]], [[Zürich]] and [[Berne]], forming the "Old Federation" of eight states that persisted during much of the [[15th century]] (although Zürich was expelled from the confederation during the [[1440s]] due to a territorial conflict) and led to a significant increase of power and wealth of the federation, in particular due to the victories over [[Charles the Bold]] of [[Burgundy]] during the [[1470s]], and the success of the Swiss [[mercenary|mercenaries]]. The traditional listing order of the [[cantons of Switzerland]] reflects this state, listing the eight "Old Cantons" first, with the city states preceding the founding cantons, followed by cantons that joined the federation after [[1481]], in historical order. The Swiss victory in a war against the [[Swabian League]] in [[1499]] amounted to de facto independence from the [[Holy Roman Empire]]. 
-
-In [[1506]], Pope [[Julius II]] engaged the [[Swiss Guard]] that continues to serve the [[Vatican]] to the present day. The expansion of the federation, and the reputation of invincibility acquired during the earlier wars, suffered a first setback in [[1515]] with the Swiss defeat in the [[Battle of Marignano]].
-
-The success of [[Zwingli]]'s [[Reformation]] in some cantons led to inter-cantonal wars in [[1529]] and [[1531]] (''Kappeler Kriege''). The conflict between Catholic and Protestant cantons persisted, erupting in further violence at the [[battles of Villmergen]] in [[1656]] and [[1712]].
 
 [[Image:Stumpf-Chronik-Zug.png|left|200px|thumb|1548 view of [[Zug]]]]
 
-Under the [[Treaty of Westphalia]] in [[1648]], European countries recognised Switzerland's independence from the Holy Roman Empire and its [[neutral country|neutrality]] (''ancien r&eacute;gime''). In [[1798]], armies of the [[French Revolution]] conquered Switzerland and in [[1803]], [[Napoleon Bonaparte]] imposed a new constitution, largely restoring Swiss autonomy.
-The [[Congress of Vienna]] in [[1815]] fully re-established Swiss independence and the European powers agreed to permanently recognise the Swiss neutrality. At this time, the territory of Switzerland was increased for the last time, by the new cantons of [[Valais]], [[Canton of Neuchâtel|Neuchatel]] and [[Canton of Geneva|Geneva]].
 
-In [[1847]], a civil war broke out between the Catholic and the Protestant cantons (''Sonderbundskrieg''). Its immediate cause was a 'special treaty' (''[[Sonderbund]]'') of the Catholic cantons. The war lasted for less than a month, causing fewer than 100 casualties. Apart from small riots, this was the latest armed conflict on Swiss territory.
-
-As a consequence of the civil war, Switzerland adopted a federal [[constitution]] in [[1848]], amending it extensively in [[1874]] and establishing federal responsibility for defence, trade, and legal matters. In [[1891]], the constitution was revised with unusually strong elements of [[direct democracy]], which remains unique even today. Since then, continued political, economic, and social improvement has characterised Swiss history.  
-
-In [[1920]], Switzerland joined the [[League of Nations]], and in [[1963]] the [[Council of Europe]].
-
-Switzerland proclaimed neutrality in [[World War I]] and was not involved militarily in the conflict. Neutrality was again proclaimed in [[World War II]], and although a German intervention was both planned and anticipated, it ultimately didn't occur. The massive mobilization of Swiss armed forces under the leadership of General [[Henri Guisan]] is often cited as a decisive factor that the German invasion was never initiated. Modern historical findings, such as the research done by the [[Bergier commission]], indicate that another major factor was the continued trade by Swiss banks with Nazi Germany.
-
-Women were granted the right to vote in the first cantons in [[1959]], at the federal level in [[1971]], in the last canton only in [[1990]]. In [[1979]], parts of the canton of [[Berne]] attained independence, forming the new [[canton of Jura]]. On April 18, [[1999]] the Swiss population and the cantons voted in favor of a completely revised federal [[constitution]].
-
-In [[2002]] Switzerland became a full member of the [[United Nations]], leaving the [[Vatican]] as the last widely recognized state without full UN membership. Switzerland is not a member state of the [[EU]] but applied for membership therein in May 1992. Switzerland has not advanced this application since the rejection, by referendum, of the [[European Economic Area]] in December 1992.   However, Swiss law is gradually being adjusted to that of the EU and the government has signed a number of [[bilateral agreements]] with the European Union. Switzerland (together with [[Liechtenstein]]) has been surrounded by the EU since [[Austria|Austria's]] membership in [[1995]]. On June 5, [[2005]], Swiss voters agreed, by a 55% majority, to join the [[Schengen treaty]], a result that was welcomed by EU commentators as a sign of goodwill by a Switzerland that is traditionally perceived as isolationist.
 [[Image:Carte suisse2.png|thumb|310px|left|Swisi]]
 
 == Politiki ==
-''Main article: [[Politiki ya Swisi]]''
+''Article molayi: [[Politiki ya Swisi]]''
 
 [[Image:Curia Confoederationis Heleticae - Swiss parliament and government.jpg|right|200px|thumb|[[Curia Confoederationis Helveticae]] in [[Bern]]]]
 
-Switzerland features a system of government unlike any other seen in [[Europe]], or indeed much of the world.
-
-The bicameral Swiss [[parliament]], the Federal Assembly, is the primary seat of power, apart from the Federal Council. Both houses, the [[Swiss Council of States|Council of States]] and the [[National Council of Switzerland|National Council]], have equal powers in all respects, including the right to introduce legislation.
-
-Under the [[1999]] [[constitution]], cantons hold all powers not specifically delegated to the federation.
-
-The 46 members of the Council of States (two from each canton and one from former half cantons) are directly elected in each canton, whereas the 200 members of the National Council are elected directly under a system of [[proportional representation]]. Members of both houses serve for 4 years. Through [[referenda]] citizens may challenge any law voted by federal parliament and through [[initiative]]s introduce amendments to the federal constitution, making Switzerland a [[semi-direct democracy]].
-
-The top [[executive]] body and collective [[Head of State]] is the [[Swiss Federal Council|Federal Council]], a collegial body of seven members. Although the constitution provides that the Assembly elects and supervises the members of the Council, the latter (and its administration) has gradually assumed a preeminent role in directing the [[legislative]] process as well as executing federal laws. The [[President of the Swiss Confederation|President of the Confederation]] is elected from the seven. During a one year term, s/he assumes special representative functions.
-
-From 1959 to December 2003, the four major parties were represented in the Federal Council according to the "magic formula", proportional to their representation in federal parliament: 2 [[Christian Democratic People's Party of Switzerland|Christian Democrats (CVP/PDC)]], 2 from the [[Social Democratic Party of Switzerland|Social Democrats (SPS/PSS)]], 2 [[Radical Free Democratic Party of Switzerland|Free Democrats (FDP/PRD)]], and 1 from the [[Swiss People's Party|Swiss People's Party (SVP/UDC)]]. This traditional distribution of seats, however, is not backed up by any law, and in the 2003 elections to the Federal Council the CVP/PDC lost their second seat to the SVP/UDC.
-
-The function of the [[Federal Supreme Court of Switzerland|Federal Supreme Court]] is to hear appeals of cantonal courts or the administrative rulings of the federal administration. The judges are elected by the Federal Assembly for six-year terms.
-
-Citizens may seek a decision on an [[amendment]] they want to make to the Constitution. For such an amendment initiative to  be organized,the signatures of 100,000 voters must be collected within 18 months. They are the driving force behind [[direct democracy]].
-
-A [[popular initiative]] may be formulated as a general proposal or - much more often - be put forward as a precise new text  whose wording can no longer be changed by [[Parliament]]  and the Government. Since 1987, voters may approve both the [[initiative]] and the [[counter-proposal]]. A deciding  question determines which of the two texts will enter into force if both of them secure a popular majority and a majority of  the [[States]]. 
-
-Popular initiatives do not originate from the [[Parliament]] or [[Government]] but from the citizens themselves.
-
-See also:
-* [[International relations of Switzerland]]
 
 == Ba Kanton (Provinsi Fedelali) ==
 ''Article molayi: [[Ba Kanton ya Swisi]]''
@@ -131,105 +84,19 @@ The Swiss Confederation consists of 26 [[canton (subnational entity)|canton]]s:
 
 <small>[*] these Cantons are represented by only one councilor in the [[Swiss Council of States|Council of States]].
 
-The population varies between 15,000 (Appenzell Innerrhoden) and 1,253,500 (Zürich), area between 37 km² (Basel-Stadt) and 7,105 km² (Grisons). Cantons are divided in a total of [[municipalities of Switzerland|2,889 municipalities]].
 
-The following are [[enclave]]s within Switzerland: [[Büsingen]] is territory of [[Germany]], [[Campione d'Italia]] is territory of [[Italy]].
 
 == Jyografi ==
-''Main article: [[Jyografi ya Swisi]]''
 
 [[Image:Map-of-Switzerland.png|thumb|right|Map of Switzerland (overview)]]
 
-With an area of 41,000 square kilometers, Switzerland is a small country. The population is  around 7.4 million, resulting in a population density of 184 people per km² (roughly comparable to the [[USA|U. S.]] state of [[Maryland]]).
-
-The Swiss landscape is characterised by the [[Alps]], a high mountain range running across the central-south of the country. Amongst the high peaks of the [[Swiss Alps]], the highest of which is the [[Dufour Peak]] at [[1 E3 m|4,634 m]], are found countless valleys, some with [[glacier]]s. From these the headwaters of several major European rivers such as the [[Rhine]], the [[Rhone River|Rhône]], the [[Inn River|Inn]], the [[Aare]] or the [[Ticino River|Ticino]], flow down into lakes such as [[Lake Geneva]], [[Lake Zürich]], [[Lake Neuchâtel]], and [[Lake Constance]] and farther down.
-
-Switzerland is made up of the Swiss Alps, Mittelland, and Jura.
-
-[[Image:swissmap.png|thumb|left|Map of Switzerland (detailed)]]
-
-The northern, more populous part of the country is more open, but can still be fairly mountainous such as with the [[Jura Mountains]], a smaller range in the northwest. The Swiss [[climate]] is generally [[temperate climate|temperate]], but it can vary greatly locally, from the harsh conditions on the high mountains to the pleasant Mediterranean climate at Switzerland's southern tip.
-
-A zoomable map of Switzerland is available at either [http://www.swissinfo-geo.org www.swissinfo-geo.org] or [http://www.swissgeo.ch www.swissgeo.ch], a zoomable satellite picture at [http://map.search.ch/ map.search.ch].
-
-
-<br style="clear:both;"/>
-
-''See also:'' [[Swisstopo]] topographical survey, [[List of lakes of Switzerland]], [[List of rivers of Switzerland]], [[List of mountain passes in Switzerland]].
-
-== Economy ==
-''Main article: [[Economy of Switzerland]]''
-
-Switzerland is a prosperous and stable modern market economy with a per capita [[Gross Domestic Product|GDP]] higher than that of the big western European economies. Switzerland is a member of the [[European Free Trade Association]]. The Swiss in recent years have brought their economic practices largely into conformity with the [[European Union]]'s to enhance their international competitiveness. Full EU membership is a long-term objective of the Swiss government, but there is considerable popular sentiment against this. To this end, it has established an [http://www.europa.admin.ch/e/index.htm Integration Office] under the Department of Foreign and Economic Affairs. In order to minimise the negative consequences of Switzerland's isolation from the rest of Europe, Bern and Brussels signed seven agreements, called Bilateral Agreements I, to further liberalise trade ties in [[1999]] and entering into force in 2001. This first series of bilateral agreements included the free movement of persons.  A second series covering nine areas was signed in 2004 and is waiting ratification.  The second series includes the [[Schengen treaty]] and the [[Dublin Convention]].  They continue to discuss further areas for cooperation. Switzerland voted against membership in the [[European Economic Area]] in December 1992 and has since maintained and developed its relationships with the European Union and European countries via bilateral agreements.  
-
-* [[List of Swiss companies]]
-
-== Demographics ==
-''Main article: [[Demographics of Switzerland]]''
 
 [[Image:Swiss languages.png|thumb|The languages of Switzerland: <br>[[German language|German]] (63.7%; yellow), <br>[[French language|French]] (19.2%; purple), <br>[[Italian language|Italian]] (7.6%; green), <br>[[Romansh language|Romansh]] (0.6%; red)]]
 
-Switzerland sits at the crossroads of several major European cultures, which have heavily influenced the country's languages and cultural practices. Switzerland has four official languages: [[German language|German]] (64%; yellow) in the north and centre, [[French language|French]] (19%; purple) to the west, [[Italian language|Italian]] (8%; green) in the south, and finally [[Romansh language|Romansh]], a [[Romance language]] spoken by a small minority (<1%; red) in the southeastern canton of [[Graubünden]] and parts of [[Ticino]]. There is no obligation for the state to translate its communication in all four languages, so most communication is in three languages and only some very important documents are translated to Romansh. Indeed, in the parliament, German, French and Italian are the official languages and simultaneous translation is provided. The German spoken in Switzerland is predominantly a group of [[dialect]]s that are almost unintelligible to Germans and are collectively known as [[Swiss German]], but newspapers and some broadcasts use [[High German]], which is also the predominant language in the German part for any written communication. [[Swiss French]] and [[Swiss Italian]] differ far less from their counterparts spoken in France and Italy. Learning one of the other national languages is obligatory for all Swiss, so most Swiss speak two or more languages. It should also be noted that [[English]] is a Swiss [[lingua franca]], and, in fact, most, if not all Swiss, have some command of English. Many Swiss documents and websites are also available in English. Resident foreigners and temporary foreign workers make up about 20% of the population.
 
-The largest religion in Switzerland is [[Roman Catholicism]], to which some 43% of the population adhere. Various [[Protestant]] faiths number some 35% of the population, and immigration has established [[Islam]] (4%) and [[Eastern Orthodoxy]] (2%) as sizable minority religions. The remainder belongs to very small minorities or is unaffiliated. The stability and prosperity of Switzerland, combined with a linguistically and religiously diverse population has led some to describe the country as a consensus state or a [[consociational state]].
-
-* [[List of Swiss people]]
-
-== Culture ==
-''Main article: [[Culture of Switzerland]]''
-
-The culture of Switzerland is influenced by its neighbours, but over the years a distinctive culture with strong regional differences has developed. Traditionally Switzerland is not considered one of the centres of European culture, but this conception might be deceptive.
-
-A number of culturally active Swiss have chosen to move abroad, probably given the limited opportunities in their homeland. At the same time, the neutrality of Switzerland has attracted many creative people from all over the world. In war times the tradition of political asylum helped to attract artists, whilst recently low taxes seem predominant.
-
-Strong regionalism in Switzerland makes it difficult to speak of a homogenous Swiss culture. The influence of German, French and Italian culture on their neighbouring parts and the influence of Anglo-American culture cannot be denied. The Rhaeto-Romanic culture in the eastern mountains of Switzerland is robust.
-
-The Swiss are noted for their [[bank]]s, their [[chocolate]], their [[Swiss cheese|cheese]], their [[Swiss Army knife|pocket knives]], their [[watch|watches]] (particularly the famous [[Rolex]]), their private [[boarding school]]s and their strengths in engineering and the [[Culture of Switzerland#Science|sciences]].
-
-The tallest building in Switzerland is the [[Basler Messeturm]].
-
-* [[Music of Switzerland]]
-* [[Culture of Switzerland]]
-* [[Swiss cuisine]]
-* [[SRG SSR idée suisse]]
-* [[Switzerland in popular culture]]
-
-== Miscellaneous topics ==
-* [[2004 in Switzerland]]
-* [[2005 in Switzerland]]
-* [[Communications in Switzerland]]
-* [[Data codes for Switzerland]]
-* [[Education in Switzerland]]
-* [[Enlargement of the European Union]]
-* [[List of cities in Switzerland]]
-* [[List of Swiss people]]
-* [[List of Switzerland-related topics]]
-* [[Military of Switzerland]]
-* [[Stamps and postal history of Switzerland]]
-* [[Swiss citizenship]]
-* [[Third country relationships with the EU]]
-* [[Transportation in Switzerland]]
-
-== External links ==
-{{pic}}
-*Governmental websites
-**[http://www.admin.ch/ch/index.en.html The Federal Authorities]
-**[http://www.parlament.ch/e/homepage.htm The Swiss Parliament]
-**[http://www.bger.ch Federal Supreme Court] - (in German, French and Italian)
-**[http://www.bfs.admin.ch/bfs/portal/en/index.html Swiss Federal Statistical Office]
-*[http://www.swissinfo.org/ Switzerland's news and information platform] - maintained by the public Swiss Broadcasting Corporation (in 9 languages)
-*[http://www.dhs.ch/ Historical Dictionary of Switzerland] - Country encyclopedia (in German, French and Italian)
-*[http://www.swissworld.org Swissworld] - an encyclopedic presentation of the country by the Swiss Confederation
-*[http://www.about.ch/ About.ch] - another presentation of the country
-*[http://www.earth-photography.com/Countries/Switzerland Switzerland Pictures] - Photos of cities and nature in Switzerland
-*[http://www.myswitzerland.com Switzerland Tourism] National tourist office
-*[http://www.culturelinks.ch/ Culturelinks.ch] - a portal giving access to Swiss culture websites
-*[http://www.are.ch Spatial Planning in Switzerland] Website of Swiss Federal Office for Spatial Development (land-use planning, transportation, sustainable development)
-*[[:als:|Alemannic Wikipedia]]
 
 {{Europe}}
 
-[[Category:Switzerland|*]]
 
 [[als:Schweiz]]
 [[af:Switserland]]
