*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,4 +1,3 @@
-
 {{Infobox_country|
 common_name 		= Swisi |
 native_name 		= Schweizerische Eidgenossenschaft<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun Svizra<br>Confœderatio Helvetica|
@@ -91,7 +90,7 @@ The Swiss Confederation consists of 26 [[canton (subnational entity)|canton]]s:
 [[Image:Map-of-Switzerland.png|thumb|right|Map of Switzerland (overview)]]
 
 
-[[Image:Swiss languages.png|thumb|The languages of Switzerland: <br>[[German language|German]] (63.7%; yellow), <br>[[French language|French]] (19.2%; purple), <br>[[Italian language|Italian]] (7.6%; green), <br>[[Romansh language|Romansh]] (0.6%; red)]]
+[[Image:Swiss languages.png|thumb|The languages of Switzerland: <br>[[Alemani]] (63.7%; yellow), <br>[[Lifalansé]] (19.2%; purple), <br>[[Italiano]] (7.6%; green), <br>[[Romanshi]] (0.6%; red)]]
 
 
 
