rm excess english, french

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,101 +1,18 @@
-{{Infobox_country|
-common_name 		= Swisi |
-native_name 		= Schweizerische Eidgenossenschaft<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun Svizra<br>Confœderatio Helvetica|
-image_flag 		= Switzerland flag 300.png |
-image_coat 		= BlasonSUISSE.PNG |
-image_map 		= LocationSwitzerland.png |
-national_motto 		= Unus pro omnibus, omnes pro uno<br>(English: One for all, all for one)|
-national_anthem 	= [[Swiss Psalm]] |
-official_languages 	= [[Alemani]], [[Lifalansé]], [[Italiano]], [[Romanshi]]|
-capital 		= [[Bern]] |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
-largest_city 		= [[Zurich]] |
-government_type 	= [[Republiki Fedelali]] |
-leader_titles 		= [[Lisanga Fedelali ya Swisi|Lisanga Fedelali]]|
-leader_names 		= <!-- ordered by seniority -->[[Moritz Leuenberger]] <small>([[President of the Confederation (Switzerland)|VP 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
-area 			= 41,285|area_rank=132nd|area_magnitude=1 E10|percent_water=4.2|
-population_estimate 	= 7,399,100|population_estimate_year=2003|population_estimate_rank=92nd |
-population_density 	= 181|population_density_rank=44th |
-population_census 	= 7,288,010|population_census_year=2000|
-GDP_PPP 		= $233 billion|GDP_PPP_year=2003|GDP_PPP_rank=35th|
-GDP_nominal		= $309 billion|GDP_nominal_year=2003|GDP_nominal_rank=17th|
-GDP_PPP_per_capita 	= $30,186|GDP_PPP_per_capita_rank=8th|
-GDP_nominal_per_capita 	= $42,138|GDP_nominal_per_capita_rank=3rd|
-sovereignty_type 	=[[Independence]] |
-established_events 	=- Declared<br> - Recognised<br>Federal state |
-established_dates 	=[[Lisakoli Fedelali ya 1921|Lisakoli Fedelali]]<br> [[1 Ogusiti]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
-currency 	= [[Fran Swisi]]|currency_code=CHF|
-time_zone 	= [[Central European Time|CET]] |utc_offset=+1 |
-time_zone_DST	= [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
-cctld		= [[.ch]] |
-calling_code	= 41|
-footnotes 	= |
-}}
 == Historia ==
-''Article ya molayi: [[Historia ya Swisi]]''
-
-
-[[Image:Stumpf-Chronik-Zug.png|left|200px|thumb|1548 view of [[Zug]]]]
-
+''Ekakoli ya molayi: [[Historia ya Swisi]]''
 
 [[Image:Carte suisse2.png|thumb|310px|left|Swisi]]
 
 == Politiki ==
-''Article molayi: [[Politiki ya Swisi]]''
-
-[[Image:Curia Confoederationis Heleticae - Swiss parliament and government.jpg|right|200px|thumb|[[Curia Confoederationis Helveticae]] in [[Bern]]]]
-
+''Ekakoli ya molayi: [[Politiki ya Swisi]]''
 
 == Ba Kanton (Provinsi Fedelali) ==
-''Article molayi: [[Ba Kanton ya Swisi]]''
-
-[[Image:Schweiz graubuenden sent.jpg|right|180px|thumb|Wintertime view of [[Sent]], in the eastern canton of [[Graubünden]].]]
-
-The Swiss Confederation consists of 26 [[canton (subnational entity)|canton]]s:
-<table><tr valign=top><td>
-*[[Aargau]] (Argovia)
-*[[Appenzell Innerrhoden]] (Inner Rhodes) *
-*[[Appenzell Ausserrhoden]] (Outer Rhodes) *
-*[[Basel-Stadt]] (Basle-City) *
-*[[Basel-Landschaft]] (Basle-Country) *
-*[[Canton of Bern|Bern]] (Berne)
-*[[Canton of Fribourg|Fribourg]] (Freiburg)
-*[[Canton of Geneva|Geneva]] (Genève)
-*[[Canton of Glarus|Glarus]]
-*[[Graubünden]] (Grischun/Grigioni)
-*[[Canton of Jura|Jura]]
-*[[Canton of Lucerne|Lucerne]] (Luzern)
-*[[Canton of Neuchâtel|Neuchâtel]]
-<td>
-*[[Nidwalden]] *
-*[[Obwalden]] *
-*[[Canton of Schaffhausen|Schaffhausen]]
-*[[Canton of Schwyz|Schwyz]]
-*[[Canton of Solothurn|Solothurn]] (Soleure)
-*[[Canton of St. Gallen|St. Gallen]] (St. Gall)
-*[[Thurgau]] (Thurgovia)
-*[[Ticino]]
-*[[Canton of Uri|Uri]]
-*[[Valais]] (Wallis)
-*[[Vaud]]
-*[[Canton of Zug|Zug]]
-*[[Canton of Zurich|Zürich]] (Zurich)
-</table>
-
-<small>[*] these Cantons are represented by only one councilor in the [[Swiss Council of States|Council of States]].
-
-
+''Ekakoli ya molayi: [[Ba Kanton ya Swisi]]''
 
 == Jyografi ==
-
-[[Image:Map-of-Switzerland.png|thumb|right|Map of Switzerland (overview)]]
-
-
-[[Image:Swiss languages.png|thumb|The languages of Switzerland: <br>[[Alemani]] (63.7%; yellow), <br>[[Lifalansé]] (19.2%; purple), <br>[[Italiano]] (7.6%; green), <br>[[Romanshi]] (0.6%; red)]]
-
-
+'''Ekakoli ya molayi: [[Jyografi ya Swisi]]'''
 
 {{Europe}}
-
 
 [[als:Schweiz]]
 [[af:Switserland]]
