--- a/Radio_Okapi.mw
+++ b/Radio_Okapi.mw
@@ -1,1 +1,6 @@
-Delete -- no Lingala text.
+{{ndámbo}}
+
+'''Radio Okapi''' ezalí radio na [[MONUC]].
+
+== Mankásá o libándá ==
+* [[http://www.radiookapi.net/]]
