*Empty MediaWiki Message*

--- a/Radio_Okapi.mw
+++ b/Radio_Okapi.mw
@@ -3,4 +3,4 @@
 '''Radio Okapi''' ezalí radio na [[MONUC]].
 
 == Mankásá o libándá ==
-* [[http://www.radiookapi.net/]]
+* [http://www.radiookapi.net/ Radio Okapi]
