*Empty MediaWiki Message*

--- a/Radio_Okapi.mw
+++ b/Radio_Okapi.mw
@@ -2,5 +2,6 @@
 
 '''Radio Okapi''' ezalí radio na [[MONUC]].
 
-== Mankásá o libándá ==
+==Tála mpé==
+=== Mankásá o libándá ===
 * [http://www.radiookapi.net/ Radio Okapi]
