*Empty MediaWiki Message*

--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -4,5 +4,5 @@
 [[Image:Mobutu.jpg|thumb|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 {{ndámbo}}
 
-
-* voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
+==Tála mpé==
+* [[Kongo Demokratiki (Tata-mokonzi)]]
