*Empty MediaWiki Message*

--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -1,14 +1,12 @@
-'''La Gombe''' to mpe '''Gombe''' ezali [[komini]] na Nor ya Engumba-Etuka [[Kinshasa]]. Esuki na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpe na [[boulevale ya 30 juin]] na Sud.
+'''La Gombe''' tǒ mpé '''Gombe''' ezalí [[komini]] na Nor ya Engumba-Etuka [[Kinshasa]]. Esúkí na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpé na [[boulevale ya 30 juin]] na Sudi.
 
-Commune résidentielle et arborée située face à [[Brazzaville]], elle abrite les principaux organes du pouvoir de la [[République démocratique du Congo]], dont la Présidence de la république, ainsi que de nombreux ministères, média et représentations diplomatiques.
+== Tála mpé ==
 
-==Tala mpe==
-
-===Mankasa okati Wikipedia===
+===Mankásá o katí Wikipedia===
 
 *[[Molongo ya ba komini ya Kinshasa]]
 
-===Mankasa olibanda Wikipedia===
+===Mankásá o libanda Wikipedia===
 
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_gombe_2001.jpg Carte de Gombe] (2001)
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
