--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -22,6 +22,6 @@ Sites de quelques institutions établie à Gombe
 *[http://www.monuc.org Monuc]
 *[http://www.golfclubkinshasa.cd/ Golf Club de Kinshasa]
 
-[[Category:Ba Komini ya Kinshasa]]
+[[Category:Bakomini ya Kinshasa]]
 
 {{CommunesKinshasa}}
