--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -2,11 +2,11 @@
 
 == Tála mpé ==
 
-===Mankásá o katí Wikipedia===
+===Nkásá o katí Wikipedia===
 
 *[[Molongo ya ba komini ya Kinshasa]]
 
-===Mankásá o libanda Wikipedia===
+===Nkásá o libanda Wikipedia===
 
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_gombe_2001.jpg Carte de Gombe] (2001)
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
