*Empty MediaWiki Message*

--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -1,4 +1,5 @@
-[[ang:George W. Bush]] [[ar:جورج و. بوش]] [[bg:Джордж У. Буш]] [[ca:George Walker Bush]] [[cs:George W. Bush]] [[cy:George W. Bush]] [[da:George W. Bush]] [[de:George W. Bush]] [[et:George W. Bush]] [[en:George W. Bush]] [[es:George Walker Bush]] [[eo:George W. BUSH]] [[ga:George W. Bush]] [[gl:George Walker Bush]] [[ko:조지 W. 부시]] [[hr:George W. Bush]] [[io:George W. Bush]] [[id:George W. Bush]] [[is:George W. Bush]] [[it:George Walker Bush]] [[he:ג'ורג' ווקר בוש]] [[kn:ಜಾರ್ಜ್ ಬುಷ್]] [[la:Georgius W. Bush]] [[li:George W. Bush]] [[hu:George W. Bush]] [[ms:George W. Bush]] [[zh-min-nan:George W. Bush]] [[nl:George Walker Bush]] [[nds:George W. Bush]] [[ja:ジョージ・ウォーカー・ブッシュ]] [[nb:George W. Bush]] [[nn:George Walker Bush]] [[pl:George W. Bush]] [[pt:George W. Bush]] [[ro:George W. Bush]] [[ru:Буш, Джордж Уокер]] [[scn:George W. Bush]] [[simple:George W. Bush]] [[sk:George W. Bush]] [[sl:George W. Bush]] [[sr:Џорџ В. Буш]] [[fi:George W. Bush]] [[sv:George W. Bush]] [[th:จอร์จ ดับเบิลยู. บุช]] [[vi:George W. Bush]] [[tr:George W. Bush]] [[zh:乔治·沃克·布什]] [[so:George W. Bush]]
+[[ang:George W. Bush]] [[ar:جورج و. بوش]] [[bg:Джордж У. Буш]] [[ca:George Walker Bush]] [[cs:George W. Bush]] [[cy:George W. Bush]] [[da:George W. Bush]] [[de:George W. Bush]] [[et:George W. Bush]] [[en:George W. Bush]] [[es:George Walker Bush]] [[eo:George W. BUSH]] [[ga:George W. Bush]] [[gl:George Walker Bush]] [[ko:조지 W. 부시]] [[hr:George W. Bush]] [[io:George W. Bush]] [[id:George W. Bush]] [[is:George W. Bush]] [[it:George Walker Bush]] [[he:ג'ורג' ווקר בוש]] [[kn:ಜಾರ್ಜ್ ಬುಷ್]] [[la:Georgius W. Bush]] [[li:George W. Bush]] [[hu:George W. Bush]] [[ms:George W. Bush]] [[zh-min-nan:George W. Bush]] [[nl:George Walker Bush]] [[nds:George W. Bush]] [[ja:ジョージ・ウォーカー・ブッシュ]] [[nb:George W. Bush]] [[nn:George Walker Bush]] [[pl:George W. Bush]] [[pt:George W. Bush]] [[ro:George W. Bush]] [[ru:Буш, Джордж Уокер]] [[scn:George W. Bush]] [[simple:George W. Bush]] [[sk:George W. Bush]] [[sl:George W. Bush]] [[sr:Џорџ В. Буш]] [[fi:George W. Bush]] [[sv:George W. Bush]] [[th:จอร์จ ดับเบิลยู. บุช]] [[tpi:George Walker Bush]]
+[[vi:George W. Bush]] [[tr:George W. Bush]] [[zh:乔治·沃克·布什]] [[so:George W. Bush]]
 
 [[Category:Mokambi ekolo ya Lisanga ya Amerika|Bush, George Walker]] [[Category:Bitumba pona kobuka bobángisɛmi|Bush, George Walker]] [[Category:Ebótami na 1946|Bush, George Walker]]
 
