--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -3,6 +3,6 @@
 
 [[Category:Mokambi ekolo ya Lisanga ya Amerika|Bush, George Walker]] [[Category:Bitumba pona kobuka bobángisɛmi|Bush, George Walker]] [[Category:Ebótami na 1946|Bush, George Walker]]
 
-'''[[Media:En-us-George Walker Bush.ogg|George Walker Bush]]''' (né le [[6 juillet]] [[1946]]), mwana ya [[George Herbert Walker Bush]] mpe ya [[Barbara Pierce]], azali banda [[2001]] mokambi ekolo ya [[Lisanga ya Amerika]] ya 43e.
+'''[[Media:En-us-George Walker Bush.ogg|George Walker Bush]]''' (né le [[6 yuli]] [[1946]]), mwana ya [[George Herbert Walker Bush]] mpe ya [[Barbara Pierce]], azali banda [[2001]] mokambi ekolo ya [[Lisanga ya Amerika]] ya 43e.
 
-{{Président des États-Unis d'Amérique}}
+{{Amerika (Tata-mokonzi)}}
