*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -3,7 +3,7 @@
 [[Image:Kikongo-m.jpg|thumb|Description manque.]] 
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
-'''Kikɔ́ngɔ''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokrati]], [[Kɔ́ngɔ-Brazaville|Kɔ́ngɔ Brazavili]] mpe na [[Angola]]. 
+'''Kikɔ́ngɔ''' ezali [[lokótá]] na bato ya [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokrati]], [[Kɔ́ngɔ-Brazaville|Kɔ́ngɔ Brazavili]] mpe na [[Angola]]. 
 
 
 == (liens) ==
