--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -6,10 +6,14 @@
 
 '''Joseph Kabila Kabange''' (abótámi [[1971]]) akomaki mokambi-ekolo [[Kɔ́ngɔ-Kinshasa]] nàkolanda tata wa ye, [[Laurent-Désiré Kabila]], mokambi-ekolo oyo akutaki liwa na loboko wa garde-du-corps waye, na Janvier [[2001]].  Na kimokonzi na ye, azali komeka kosilisa bitumba, mpe kobimisa mapinzo ya bisé mosusu olibanda ekolo Kɔ́ngɔ-Kinshasa. Nàkolanda siniatire ya mokanda ya kimia, bulamatari ya sika, pona eyángeli ekolo pona mbula mibale, ekelamaki na [[2003]], mpe okati wango bakotaki bakambi ya mapinzo mibale ya makasi koleka, oyo basilikelaki bulamatari, to mpe barebɛl; bango bakotaki na kimokonzi lokola bakambi-babale, elongo na moto moko pona parti ya mokambi-ekolo, mpe moto mosusu pona bato oyo bakeseni na politiki ya parti oyo ezali na kimokonzi, kasi baselalaka minduki te (mingi-mingi babengami [[opozision]]). Mokanda ya mibeko-mokonzi to mpe konstitision elobi ete maponeli likosalema liboso ya 30 Yuni ya 2006.
 
+<!--
 On [[March 28]], [[2004]], a coup attempt or mutiny around the capital [[Kinshasa]], allegedly organized by supporters of the late president [[Mobutu Sese Seko]], failed. On [[June 11]], 2004, coup plotters led by Major [[Eric Lenge]] attempted to take power, declaring that the country's peace process was not working, but were defeated by loyalist troops.
+-->
 
 Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa ye tata o kimokonzi. Alandaki kelasi ya mapinzo okati ya mapinzo ya [[Uganda]] mpe ya [[Rwanda]]. Asalaki na misala mingi okati o bulamatari liboso ya kozala mokambi-ekolo, lokola oyo ya General-Major mpe Mokambi-lisanga ya Mapinzo ya mabele ya ekolo Kɔ́ngɔ-Kinshasa, esika oyo a kambaki basoda o ekolo Kɔ́ngɔ-Kinshasa na bitumba ná barebɛl, obanda 1998. Kasi bato mingi bakanisaki ete ye azalaki na manso makokí te pona mosala ya mokambi-ekolo, na ntango alandaki tata wa ye [[Laurent Kabila]] na kimokonzi.  
 
-==Mankásá olibanda Wikipedia==
-* voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
+== Tála mpé ==
+* [[Kongo Demokratiki (Tata-mokonzi)]]
+
+== Nkásá olibanda Wikipedia ==
 * [http://news.bbc.co.uk/1/hi/world/africa/country_profiles/1076399.stm BBC Country Profile]*
